[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/lobby.gd" type="Script" id=1]

[node name="lobby" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="start_group" type="Control" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ip_input" type="LineEdit" parent="start_group"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 186.0
margin_top = 324.0
margin_right = 386.0
margin_bottom = 348.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = "127.0.0.1"
focus_mode = 2
placeholder_text = "Host IP ..."
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
context_menu_enabled = true
_sections_unfolded = [ "Placeholder", "Rect" ]

[node name="playername_input" type="LineEdit" parent="start_group"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 346.0
margin_top = 238.0
margin_right = 546.0
margin_bottom = 262.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
placeholder_text = "Player Name ..."
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
context_menu_enabled = true
_sections_unfolded = [ "Placeholder", "Rect" ]

[node name="host_button" type="Button" parent="start_group"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 572.0
margin_top = 326.0
margin_right = 671.0
margin_bottom = 346.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Host a Game!"
flat = false
align = 1

[node name="join_button" type="Button" parent="start_group"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 395.0
margin_top = 326.0
margin_right = 487.0
margin_bottom = 346.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Join a Game!"
flat = false
align = 1

[node name="waiting_group" type="Control" parent="."]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="abort_button" type="Button" parent="waiting_group"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 690.0
margin_top = 370.0
margin_right = 737.0
margin_bottom = 390.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Abort"
flat = false
align = 1

[node name="start_button" type="Button" parent="waiting_group"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 766.0
margin_top = 369.0
margin_right = 811.0
margin_bottom = 389.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start!"
flat = false
align = 1

[node name="player_label" type="Label" parent="waiting_group"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 329.0
margin_top = 171.0
margin_right = 376.0
margin_bottom = 219.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Connected Players:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player_list" type="ItemList" parent="waiting_group"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 327.0
margin_top = 199.0
margin_right = 607.0
margin_bottom = 339.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
icon_mode = 1
_sections_unfolded = [ "Rect" ]

[node name="error_label" type="Label" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 105.0
margin_top = 503.0
margin_right = 145.0
margin_bottom = 517.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="start_group/host_button" to="." method="_on_host_button_pressed"]

[connection signal="pressed" from="start_group/join_button" to="." method="_on_join_button_pressed"]

[connection signal="pressed" from="waiting_group/abort_button" to="." method="_on_abort_button_pressed"]

[connection signal="pressed" from="waiting_group/start_button" to="." method="_on_start_button_pressed"]


